--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -1,5 +1,38 @@
-
 services:
+  mariadb:
+    build:
+      context: ./requirements/mariadb
+      dockerfile: Dockerfile
+    container_name: mariadb
+    volumes:
+      - mariadb_data:/var/lib/mysql
+    networks:
+      - inception_network
+    env_file:
+      - .env
+    restart: always
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "--silent"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  wordpress:
+    build:
+      context: ./requirements/wordpress
+      dockerfile: Dockerfile
+    container_name: wordpress
+    volumes:
+      - wordpress_data:/var/www/html
+    networks:
+      - inception_network
+    depends_on:
+      mariadb:
+        condition: service_healthy
+    env_file:
+      - .env
+    restart: always
+
   nginx:
     build:
       context: ./requirements/nginx
@@ -13,34 +46,6 @@ services:
       - inception_network
     depends_on:
       - wordpress
-    restart: always
-
-  wordpress:
-    build:
-      context: ./requirements/wordpress
-      dockerfile: Dockerfile
-    container_name: wordpress
-    volumes:
-      - wordpress_data:/var/www/html
-    networks:
-      - inception_network
-    depends_on:
-      - mariadb
-    env_file:
-      - .env
-    restart: always
-
-  mariadb:
-    build:
-      context: ./requirements/mariadb
-      dockerfile: Dockerfile
-    container_name: mariadb
-    volumes:
-      - mariadb_data:/var/lib/mysql
-    networks:
-      - inception_network
-    env_file:
-      - .env
     restart: always
 
 networks:
