--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
     
-    server_name ${DOMAIN_NAME};
+    server_name klakbuic.42.fr;
     
     ssl_certificate /etc/nginx/ssl/inception.crt;
     ssl_certificate_key /etc/nginx/ssl/inception.key;
