--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -2,10 +2,7 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
     
-    server_name klakbuic.42.fr;
-    
-    ssl_certificate /etc/nginx/ssl/inception.crt;
-    ssl_certificate_key /etc/nginx/ssl/inception.key;
+    ## SSL_BLOCK ##
     ssl_protocols TLSv1.2 TLSv1.3;
     
     root /var/www/html;
